--- a/hisac-web/src/main/webapp/resources/css/fontend/mainstyle.sass
+++ b/hisac-web/src/main/webapp/resources/css/fontend/mainstyle.sass
@@ -226,7 +226,7 @@ header
     left: 50%
     top: 50%
     background-size: cover
-    background-image: url('../img/icon/player_o.svg')
+    background-image: url('../../img/icon/player_o.svg')
     transform: translateX(-50%) translateY(-50%)
 
 .wordad
@@ -291,14 +291,14 @@ header
     +size(1rem,1rem)
     background-size: cover
   .start
-    background-image: url('../img/icon/icon_left.svg')
+    background-image: url('../../img/icon/icon_left.svg')
   .prev
-    background-image: url('../img/icon/icon_left_1.svg')
+    background-image: url('../../img/icon/icon_left_1.svg')
   .next
-    background-image: url('../img/icon/icon_left_1.svg')
+    background-image: url('../../img/icon/icon_left_1.svg')
     transform: rotate(180deg)
   .end
-    background-image: url('../img/icon/icon_left.svg')
+    background-image: url('../../img/icon/icon_left.svg')
     transform: rotate(180deg)
 
 .pagecount
@@ -537,7 +537,7 @@ li.fancyTab
   .banner
     width: 100%
     padding: 12% 8%
-    background-image: url('../img/banner.jpg')
+    background-image: url('../../img/banner.jpg')
     background-size: cover
     h2
       color: white
@@ -563,7 +563,7 @@ li.fancyTab
       width: 0.875rem
       height: 0.875rem
       margin-right: 0.5rem
-      background-image: url('../img/icon/icon_cube.svg')
+      background-image: url('../../img/icon/icon_cube.svg')
   .line_div
     height: 0.5px
     width: 100%
@@ -606,7 +606,7 @@ li.fancyTab
       width: 1.3rem
       height: 1.3rem
       margin-right: 1rem
-      background-image: url('../img/icon/icon_cube.svg')
+      background-image: url('../../img/icon/icon_cube.svg')
 
 //page plan-info
 #banner_content
@@ -615,7 +615,7 @@ li.fancyTab
     width: 100%
     padding: 12% 8%
     text-align: center
-    background-image: url('../img/plan_banner.jpg')
+    background-image: url('../../img/plan_banner.jpg')
     background-size: cover
     h2,h5
       color: white
@@ -643,7 +643,7 @@ li.fancyTab
   display: inline-block
   width: 1.3rem
   height: 1.3rem
-  background-image: url('../img/icon/icon_cube.svg')
+  background-image: url('../../img/icon/icon_cube.svg')
 
 
 //page result
