--- a/hisac-web/src/main/webapp/resources/css/fontend/map_point.css
+++ b/hisac-web/src/main/webapp/resources/css/fontend/map_point.css
@@ -1,4 +1,4 @@
-.d1, .d2, .d3, .s1, .s2, .s3, .t1, .t2, .t3, .u1, .u2, .u3, .u4, .g1, .v1, .o1, .o2, .o3 {
+.d1, .d2, .d3, .s1, .s2, .s3, .t1, .t4, .t3, .u1, .u2, .u3, .u4, .g1, .v1, .o1, .o4, .o3 {
   cursor: pointer;
   position: absolute;
   z-index: 2;
@@ -11,6 +11,7 @@
   background-color: #fa7805;
 }
 
+/*巴拿馬*/
 .d1 {
   left: 25%;
   top: 50%;
@@ -79,9 +80,11 @@
             box-shadow: 0 0 0 0 rgba(0, 172, 193, 0);
   }
 }
+
+/*台灣*/
 .s1 {
-  left: 67%;
-  top: 40%;
+  left: 76%;
+  top: 42%;
   width: 0.875rem;
   height: 0.875rem;
   -webkit-box-shadow: 0 0 0 rgba(168, 126, 59, 0.4);
@@ -91,9 +94,10 @@
   opacity: 80%;
 }
 
+/*德國*/
 .s2 {
-  left: 44%;
-  top: 30%;
+  left: 47%;
+  top: 35%;
   width: 0.7rem;
   height: 0.7rem;
   -webkit-box-shadow: 0 0 0 rgba(168, 126, 59, 0.4);
@@ -105,9 +109,10 @@
   opacity: 50%;
 }
 
+/*馬來西亞*/
 .t1 {
-  left: 45%;
-  top: 50%;
+  left: 72%;
+  top: 60%;
   width: 0.775rem;
   height: 0.775rem;
   -webkit-box-shadow: 0 0 0 rgba(168, 126, 59, 0.4);
@@ -117,9 +122,10 @@
   opacity: 90%;
 }
 
-.t2 {
-  left: 72%;
-  top: 23%;
+/*中國*/
+.t4 {
+  left: 71%;
+  top: 36%;
   width: 0.8rem;
   height: 0.8rem;
   -webkit-box-shadow: 0 0 0 rgba(168, 126, 59, 0.4);
@@ -131,9 +137,10 @@
   opacity: 70%;
 }
 
+/*法國*/
 .t3 {
   left: 45%;
-  top: 43%;
+  top: 40%;
   width: 0.6rem;
   height: 0.6rem;
   -webkit-box-shadow: 0 0 0 rgba(168, 126, 59, 0.4);
@@ -145,6 +152,7 @@
   opacity: 40%;
 }
 
+/*印度*/
 .u1 {
   left: 65%;
   top: 43%;
@@ -170,9 +178,10 @@
           animation-delay: 11s;
 }
 
+/*俄羅斯*/
 .u3 {
-  left: 58%;
-  top: 15%;
+  left: 68%;
+  top: 20%;
   width: 0.875rem;
   height: 0.875rem;
   -webkit-box-shadow: 0 0 0 rgba(168, 126, 59, 0.4);
@@ -196,9 +205,10 @@
           animation-delay: 14s;
 }
 
+/*越南*/
 .v1 {
-  left: 52%;
-  top: 67%;
+  left: 72%;
+  top: 48%;
   width: 0.875rem;
   height: 0.875rem;
   -webkit-box-shadow: 0 0 0 rgba(168, 126, 59, 0.4);
@@ -209,9 +219,10 @@
           animation-delay: 15s;
 }
 
+/** 美國 **/
 .o1 {
-  left: 25%;
-  top: 30%;
+  left: 22%;
+  top: 31%;
   width: 0.8rem;
   height: 0.8rem;
   -webkit-box-shadow: 0 0 0 rgba(168, 126, 59, 0.4);
@@ -222,9 +233,10 @@
           animation-delay: 3s;
 }
 
-.o2 {
-  left: 76%;
-  top: 20%;
+/*日本*/
+.o4 {
+  left: 79%;
+  top: 29%;
   width: 0.875rem;
   height: 0.875rem;
   -webkit-box-shadow: 0 0 0 rgba(168, 126, 59, 0.4);
