update fontend map

--- a/hisac-web/src/main/webapp/resources/css/fontend/basicstyle.css
+++ b/hisac-web/src/main/webapp/resources/css/fontend/basicstyle.css
@@ -37,10 +37,10 @@ label {
 }
 
 * {
-  -webkit-user-select: auto;
-     -moz-user-select: auto;
-      -ms-user-select: auto;
-          user-select: auto;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 html, body {
