--- a/hisac-web/src/main/webapp/resources/css/fontend/index_style.sass
+++ b/hisac-web/src/main/webapp/resources/css/fontend/index_style.sass
@@ -312,14 +312,14 @@ li.fancyTab
 .worldicon
   width: 100px
   height: 50px
-  background-image: url('../../img/icon/icon_return_world.svg')
+  background-image: url('../img/icon/icon_return_world.svg')
   background-size: cover
   margin-bottom: 0.5rem
   transition: 0.5s
   cursor: pointer
   &:hover
     transition: 0.5s
-    background-image: url('../../img/icon/icon_return_worldo.svg')
+    background-image: url('../img/icon/icon_return_worldo.svg')
 
 
 
@@ -391,42 +391,42 @@ li.fancyTab
       width: 0.6rem
       height: 0.6rem
       margin-right: 3%
-      background-image: url('../../img/icon/icon_cube.svg')
+      background-image: url('../img/icon/icon_cube.svg')
 
 
 .blue
   span::before
-    background-image: url('../../img/icon/icon_cube_blue.svg')!important
+    background-image: url('../img/icon/icon_cube_blue.svg')!important
   span:hover
     background-color: #366694!important
 .lightblue
   span::before
-    background-image: url('../../img/icon/icon_cube_lightblue.svg')!important
+    background-image: url('../img/icon/icon_cube_lightblue.svg')!important
   span:hover
     background-color: #7caedd!important
 .lightblue
   span::before
-    background-image: url('../../img/icon/icon_cube_lightblue.svg')!important
+    background-image: url('../img/icon/icon_cube_lightblue.svg')!important
   span:hover
     background-color: #7caedd!important
 .green
   span::before
-    background-image: url('../../img/icon/icon_cube_green.svg')!important
+    background-image: url('../img/icon/icon_cube_green.svg')!important
   span:hover
     background-color: #63cecb!important
 .yellow
   span::before
-    background-image: url('../../img/icon/icon_cube_yellow.svg')!important
+    background-image: url('../img/icon/icon_cube_yellow.svg')!important
   span:hover
     background-color: #ffbf61!important
 .deepred
   span::before
-    background-image: url('../../img/icon/icon_cube_red.svg')!important
+    background-image: url('../img/icon/icon_cube_red.svg')!important
   span:hover
     background-color: #ff5f5f!important 
 .pink
   span::before
-    background-image: url('../../img/icon/icon_cube_pink.svg')!important
+    background-image: url('../img/icon/icon_cube_pink.svg')!important
   span:hover
     background-color: #ff6e9e!important         
 
@@ -437,7 +437,7 @@ li.fancyTab
     width: 30px
     height: 30px
     margin-right: 1%
-    background-image: url('../../img/icon/icon_cube2.svg')
+    background-image: url('../img/icon/icon_cube2.svg')
 
 .line2
   margin: 1rem 0
@@ -447,70 +447,70 @@ li.fancyTab
   width: 100%
   background-size: cover
 .inbound
-  background-image: url('../../img/icon/icon_inbound.svg')
+  background-image: url('../img/icon/icon_inbound.svg')
 .outbound
-  background-image: url('../../img/icon/icon_outbound.svg')
+  background-image: url('../img/icon/icon_outbound.svg')
 .mechanism
-  background-image: url('../../img/icon/icon_mech.svg')
+  background-image: url('../img/icon/icon_mech.svg')
 .result
-  background-image: url('../../img/icon/icon_result_paper.svg')
+  background-image: url('../img/icon/icon_result_paper.svg')
 
 
 
 .change_pink1
-  background-image: url('../../img/icon/index_change_color/icon_inbound_pink.svg')
+  background-image: url('../img/icon/index_change_color/icon_inbound_pink.svg')
 .change_pink2
-  background-image: url('../../img/icon/index_change_color/icon_outbound_pink.svg')
+  background-image: url('../img/icon/index_change_color/icon_outbound_pink.svg')
 .change_pink3
-  background-image: url('../../img/icon/index_change_color/icon_mech_pink.svg')
+  background-image: url('../img/icon/index_change_color/icon_mech_pink.svg')
 .change_pink4
-  background-image: url('../../img/icon/index_change_color/icon_result_paper_pink.svg')
+  background-image: url('../img/icon/index_change_color/icon_result_paper_pink.svg')
 
 
 .change_green1
-  background-image: url('../../img/icon/index_change_color/icon_inbound_green.svg')
+  background-image: url('../img/icon/index_change_color/icon_inbound_green.svg')
 .change_green2
-  background-image: url('../../img/icon/index_change_color/icon_outbound_green.svg')
+  background-image: url('../img/icon/index_change_color/icon_outbound_green.svg')
 .change_green3
-  background-image: url('../../img/icon/index_change_color/icon_mech_green.svg')
+  background-image: url('../img/icon/index_change_color/icon_mech_green.svg')
 .change_green4
-  background-image: url('../../img/icon/index_change_color/icon_result_paper_green.svg')
+  background-image: url('../img/icon/index_change_color/icon_result_paper_green.svg')
 
 .change_yellow1
-  background-image: url('../../img/icon/index_change_color/icon_inbound_yellow.svg')
+  background-image: url('../img/icon/index_change_color/icon_inbound_yellow.svg')
 .change_yellow2
-  background-image: url('../../img/icon/index_change_color/icon_outbound_yellow.svg')
+  background-image: url('../img/icon/index_change_color/icon_outbound_yellow.svg')
 .change_yellow3
-  background-image: url('../../img/icon/index_change_color/icon_mech_yellow.svg')
+  background-image: url('../img/icon/index_change_color/icon_mech_yellow.svg')
 .change_yellow4
-  background-image: url('../../img/icon/index_change_color/icon_result_paper_yellow.svg')
+  background-image: url('../img/icon/index_change_color/icon_result_paper_yellow.svg')
 
 .change_blue1
-  background-image: url('../../img/icon/index_change_color/icon_inbound_blue.svg')
+  background-image: url('../img/icon/index_change_color/icon_inbound_blue.svg')
 .change_blue2
-  background-image: url('../../img/icon/index_change_color/icon_outbound_blue.svg')
+  background-image: url('../img/icon/index_change_color/icon_outbound_blue.svg')
 .change_blue3
-  background-image: url('../../img/icon/index_change_color/icon_mech_blue.svg')
+  background-image: url('../img/icon/index_change_color/icon_mech_blue.svg')
 .change_blue4
-  background-image: url('../../img/icon/index_change_color/icon_result_paper_blue.svg')
+  background-image: url('../img/icon/index_change_color/icon_result_paper_blue.svg')
 
 .change_lightblue1
-  background-image: url('../../img/icon/index_change_color/icon_inbound_lightblue.svg')
+  background-image: url('../img/icon/index_change_color/icon_inbound_lightblue.svg')
 .change_lightblue2
-  background-image: url('../../img/icon/index_change_color/icon_outbound_lightblue.svg')
+  background-image: url('../img/icon/index_change_color/icon_outbound_lightblue.svg')
 .change_lightblue3
-  background-image: url('../../img/icon/index_change_color/icon_mech_lightblue.svg')
+  background-image: url('../img/icon/index_change_color/icon_mech_lightblue.svg')
 .change_lightblue4
-  background-image: url('../../img/icon/index_change_color/icon_result_paper_lightblue.svg')
+  background-image: url('../img/icon/index_change_color/icon_result_paper_lightblue.svg')
 
 .change_red1
-  background-image: url('../../img/icon/index_change_color/icon_inbound_red.svg')
+  background-image: url('../img/icon/index_change_color/icon_inbound_red.svg')
 .change_red2
-  background-image: url('../../img/icon/index_change_color/icon_outbound_red.svg')
+  background-image: url('../img/icon/index_change_color/icon_outbound_red.svg')
 .change_red3
-  background-image: url('../../img/icon/index_change_color/icon_mech_red.svg')
+  background-image: url('../img/icon/index_change_color/icon_mech_red.svg')
 .change_red4
-  background-image: url('../../img/icon/index_change_color/icon_result_paper_red.svg')
+  background-image: url('../img/icon/index_change_color/icon_result_paper_red.svg')
 
 
 
@@ -529,7 +529,7 @@ li.fancyTab
     width: 50%
 .icon-info
   background-size: cover
-  background-image: url('../../img/icon/icon_livelihood.svg')
+  background-image: url('../img/icon/icon_livelihood.svg')
 
 #info_cube
   padding-bottom: 0
@@ -605,7 +605,7 @@ li.fancyTab
   left: 50%
   top: 50%
   background-size: cover
-  background-image: url('../../img/icon/player_o.svg')
+  background-image: url('../img/icon/player_o.svg')
   transform: translateX(-50%) translateY(-50%)
 
 
