--- a/hisac-web/src/main/webapp/resources/css/fontend/basicstyle.sass
+++ b/hisac-web/src/main/webapp/resources/css/fontend/basicstyle.sass
@@ -206,7 +206,7 @@ footer
 .ui-icon-circle-triangle-w,.ui-icon-circle-triangle-e
   background-position: 0px
 .ui-icon-circle-triangle-w
-  background-image: url('../../img/icon/datepick_left.svg')
+  background-image: url('../img/icon/datepick_left.svg')
   transform: rotate(-180deg)
 .ui-corner-all
   color: #666
@@ -215,7 +215,7 @@ footer
   .ui-icon
     width: 20px
     height: 20px
-    background-image: url('../../img/icon/datepick.svg')
+    background-image: url('../img/icon/datepick.svg')
 .ui-widget-header
   border: none
   background: none
@@ -326,76 +326,76 @@ footer
     margin-right: 0.5rem
     .icon_talents
       +size(60px,60px)
-      background-image: url('../../img/icon/icon_talents.svg')
+      background-image: url('../img/icon/icon_talents.svg')
       background-size: cover
       background-position: center
     .icon_subsidy_paper
       +size(60px,60px)
-      background-image: url('../../img/icon/icon_subsidy_paper.svg')
+      background-image: url('../img/icon/icon_subsidy_paper.svg')
       background-size: cover
       background-position: center
     .icon_grb
       +size(60px,60px)
-      background-image: url('../../img/icon/icon_grb.svg')
+      background-image: url('../img/icon/icon_grb.svg')
       background-size: cover
       background-position: center
     .icon_interplan
       +size(60px,60px)
-      background-image: url('../../img/icon/icon_interplan.svg')
+      background-image: url('../img/icon/icon_interplan.svg')
       background-size: cover
       background-position: center
     .icon_plan
       +size(60px,60px)
-      background-image: url('../../img/icon/icon_plan.svg')
+      background-image: url('../img/icon/icon_plan.svg')
       background-size: cover
       background-position: center
     .icon_inbound
       +size(60px,60px)
-      background-image: url('../../img/icon/icon_inbound.svg')
+      background-image: url('../img/icon/icon_inbound.svg')
       background-size: cover
       background-position: center
     .icon_sixarea
       +size(60px,60px)
-      background-image: url('../../img/icon/icon_sixarea.svg')
+      background-image: url('../img/icon/icon_sixarea.svg')
       background-size: cover
       background-position: center
     .icon_mechanism
       +size(60px,60px)
-      background-image: url('../../img/icon/icon_mechanism.svg')
+      background-image: url('../img/icon/icon_mechanism.svg')
       background-size: cover
       background-position: center
     .icon_issue
       +size(60px,60px)
-      background-image: url('../../img/icon/icon_issue.svg')
+      background-image: url('../img/icon/icon_issue.svg')
       background-size: cover
       background-position: center
     .icon_subsidy_suggest
       +size(60px,60px)
-      background-image: url('../../img/icon/icon_subsidy_suggest.svg')
+      background-image: url('../img/icon/icon_subsidy_suggest.svg')
       background-size: cover
       background-position: center
 .icon_button
   &:hover
     .icon_talents
-      background-image: url('../../img/icon/icon_talentsw.svg')
+      background-image: url('../img/icon/icon_talentsw.svg')
     .icon_subsidy_paper
-      background-image: url('../../img/icon/icon_subsidy_paperw.svg')
+      background-image: url('../img/icon/icon_subsidy_paperw.svg')
     .icon_grb
-      background-image: url('../../img/icon/icon_grbw.svg')
+      background-image: url('../img/icon/icon_grbw.svg')
     .icon_interplan
-      background-image: url('../../img/icon/icon_interplanw.svg')
+      background-image: url('../img/icon/icon_interplanw.svg')
     .icon_plan
-      background-image: url('../../img/icon/icon_planw.svg')
+      background-image: url('../img/icon/icon_planw.svg')
     .icon_inbound
-      background-image: url('../../img/icon/icon_inboundw.svg')
+      background-image: url('../img/icon/icon_inboundw.svg')
     .icon_sixarea
-      background-image: url('../../img/icon/icon_sixareaw.svg')
+      background-image: url('../img/icon/icon_sixareaw.svg')
     .icon_mechanism
-      background-image: url('../../img/icon/icon_mechanismw.svg')
+      background-image: url('../img/icon/icon_mechanismw.svg')
     .icon_issue
-      background-image: url('../../img/icon/icon_issuew.svg')
+      background-image: url('../img/icon/icon_issuew.svg')
     .icon_subsidy_suggest
-      background-image: url('../../img/icon/icon_subsidy_suggestw.svg')
+      background-image: url('../img/icon/icon_subsidy_suggestw.svg')
 //---components-form---
 .form_chart
   +size(100%,100%)
@@ -586,23 +586,23 @@ footer
   width: 1.25rem
   height: 1.25rem
   content: ""
-  background-image: url('../../img/icon/accordion_add.svg')
+  background-image: url('../img/icon/accordion_add.svg')
   background-repeat: no-repeat
   background-size: 1.25rem
   transition: transform .2s ease-in-out
 
 .accordion-button:not(.collapsed)::before
-  background-image: url('../../img/icon/accordion_minus.svg')
+  background-image: url('../img/icon/accordion_minus.svg')
 
 .accordion-button
   +trans(5s)
   &:hover
     &::before
-      background-image: url('../../img/icon/accordion_addw.svg')
+      background-image: url('../img/icon/accordion_addw.svg')
 .accordion-button:not(.collapsed)
   &:hover
     &::before
-      background-image: url('../../img/icon/accordion_minus.svg')   
+      background-image: url('../img/icon/accordion_minus.svg')   
 //---layout-sidebar button(tablet&mobile) --- 
 .sidebar_button
   color: white
@@ -663,7 +663,7 @@ footer
         white-space: pre
       span::before
         content: ""
-        background-image: url('../../img/icon/arrow_down.svg')
+        background-image: url('../img/icon/arrow_down.svg')
         display: inline-block
         width: 10px
         height: 10px
@@ -709,7 +709,7 @@ footer
         display: inline-block
         width: 0.65rem
         height: 0.65rem
-        background-image: url('../../img/icon/arrow_down.svg')
+        background-image: url('../img/icon/arrow_down.svg')
         margin-left: 0.5rem
         margin-right: 0.25rem
 #it_subject
@@ -730,7 +730,7 @@ footer
     display: inline-block
     width: 0.65rem
     height: 0.65rem
-    background-image: url('../../img/icon/arrow_up.svg')
+    background-image: url('../img/icon/arrow_up.svg')
     margin-left: 0.5rem
     margin-right: 0.25rem
 
@@ -773,14 +773,14 @@ footer
     width: 20px
     height: 20px
     margin-right: 3%
-    background-image: url('../../img/icon/icon_cube.svg')
+    background-image: url('../img/icon/icon_cube.svg')
   h5::before
     content: ""
     display: inline-block
     width: 18px
     height: 18px
     margin-right: 1%
-    background-image: url('../../img/icon/icon_cube.svg')
+    background-image: url('../img/icon/icon_cube.svg')
 .title_downloadbtn
   h5::after
     cursor: pointer
@@ -790,7 +790,7 @@ footer
     height: 35px
     margin-left: 1%
     float: right
-    background-image: url('../../img/icon/icon_download.svg')
+    background-image: url('../img/icon/icon_download.svg')
 //---pages-content---cooperate overview
 
 .overviewbtn
@@ -936,7 +936,7 @@ footer
   color: $fontcolor_g2
   font-size: 0.875rem
   margin-bottom: 0.5rem
-  background-image: url('../../img/icon/arrow.svg')
+  background-image: url('../img/icon/arrow.svg')
   &:focus
     box-shadow: none
     border-color: rgba(250, 120, 5, .5)
@@ -968,7 +968,7 @@ footer
 .form-check-input:checked
   background-color: $maincolor
   border-color: $maincolor
-  background-image: url('../../img/icon/checkbox_cube.svg') !important
+  background-image: url('../img/icon/checkbox_cube.svg') !important
 
 .form-check-input
   &:focus
@@ -978,7 +978,7 @@ footer
 .form-check-input[type=radio]
   border-radius: 0.25rem
   &:checked[type=radio]
-    background-image: url('../../img/icon/checkbox_cube.svg') !important
+    background-image: url('../img/icon/checkbox_cube.svg') !important
 
 //lightbox-close button
 .modal-header
@@ -1123,7 +1123,7 @@ footer
       width: 0.875rem
       height: 0.875rem
       background-size: 0.875rem
-      background-image: url('../../img/icon/arrow_up.svg')
+      background-image: url('../img/icon/arrow_up.svg')
     &:focus
       background-color: none
       box-shadow: none
@@ -1133,7 +1133,7 @@ footer
       background-color: white
       &::after        
         transform: none
-        background-image: url('../../img/icon/arrow.svg')
+        background-image: url('../img/icon/arrow.svg')
   .accordion-body
     padding: 1rem 1.25rem 0.75rem 0
 #subsidy_date
@@ -1262,7 +1262,7 @@ footer
         width: 20px
         height: 20px
         margin-right: 3%
-        background-image: url('../../img/icon/icon_cube.svg')
+        background-image: url('../img/icon/icon_cube.svg')
     .ad_form
       font-size: 1rem
       color: $fontcolor_g3
@@ -1287,7 +1287,7 @@ footer
       width: 20px
       height: 20px
       margin-right: 1rem
-      background-image: url('../../img/icon/icon_cube.svg')
+      background-image: url('../img/icon/icon_cube.svg')
   .form-check
     padding-top: 1rem
     color: $fontcolor_g3 !important
@@ -1303,7 +1303,7 @@ footer
   .it_filiter_sub1,.it_filiter_first
     p::before
         content: ""
-        background-image: url('../../img/icon/arrow_down.svg')
+        background-image: url('../img/icon/arrow_down.svg')
         display: inline-block
         width: 1rem
         height: 1rem
